grafico_afastamento incluído

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="menu">
     <div class="opcoes_menu">
-      <a href="sobre.html">Você Sabia?</a>
+      <a href="pesquisa.html">Você Sabia?</a>
       <a href="quiz.html">Quiz</a>
       <a style="text-decoration: underline #f75a5a 4px; color: black" href="index.html">JOGO</a>
     </div>
