grafico emocional criando

--- a/public/pesquisa.html
+++ b/public/pesquisa.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
-<body onload="retornar()">
+<body onload="retornar_dados_afastamento(); retornar_dados_motivo()">
   <div class="menu">
     <div class="opcoes_menu">
       <a style="text-decoration: underline #f75a5a 4px; color: black" href="pesquisa.html">Você Sabia?</a>
@@ -85,51 +85,70 @@
 </html>
 <script>
 
-  var qtd_sim_noBancoVar = 0;
-  var qtd_nao_noBancoVar = 0;
-  var percentual_sim;
-  var percentual_nao;
+  // variaveis para gráfico de afastamento
+  var qtd_sim_afastamento = 0;
+  var qtd_nao_afastamento = 0;
+  var percentual_sim_afastamento;
+  var percentual_nao_afastamento;
 
-  function retornar() {
-    fetch("/grafico_afastamento/retornar", { // Faz a requisição ao servidor
+  //variaveis para grafico de motivo
+  var bullying = 0;
+  var problema_em_casa = 0;
+  var mau_entendido = 0;
+  var outro = 0;
+
+  function retornar_dados_afastamento() {
+    fetch("/grafico_afastamento/retornar", {
       method: "GET",
       headers: {
         "Content-Type": "application/json",
       },
     })
-      .then(resposta => resposta.json()) // Converte a resposta para JSON
+      .then(resposta => resposta.json())
       .then(data => {
-        // Atualiza os valores com os dados recebidos do servidor
-        qtd_sim_noBancoVar = Number(data.qtd_sim);
-        qtd_nao_noBancoVar = Number(data.qtd_nao);
+        qtd_sim_afastamento = Number(data.qtd_sim);
+        qtd_nao_afastamento = Number(data.qtd_nao);
 
-        console.log("Dados recebidos:", qtd_sim_noBancoVar, qtd_nao_noBancoVar);
+        console.log("Dados recebidos:", qtd_sim_afastamento, qtd_nao_afastamento);
 
-        // Calcula os percentuais
-        calculo_percentual();
-
-        // Cria o gráfico após os dados serem carregados e os percentuais calculados
-        criarGraficoAfastamento();
+        calculo_percentual_afastamento();
+        criar_grafico_afastamento();
       })
-      .catch(erro => {
-        console.log(`#ERRO: ${erro}`);
-      });
+  }
+  function retornar_dados_motivo() {
+    fetch("/grafico_motivo/retornar", {
+      method: "GET",
+      headers: {
+        "Content-Type": "application/json",
+      },
+    })
+      .then(resposta => resposta.json())
+      .then(data => {
+        bullying = Number(data.bullying);
+        problema_em_casa = Number(data.problema_em_casa);
+        mau_entendido = Number(data.mau_entendido);
+        outro = Number(data.outro);
+
+        console.log("Dados recebidos:", bullying, problema_em_casa, mau_entendido, outro);
+
+        criar_grafico_motivo();
+      })
   }
 
-  function calculo_percentual() {
-    var total = qtd_sim_noBancoVar + qtd_nao_noBancoVar;
+  function calculo_percentual_afastamento() {
+    var total = qtd_sim_afastamento + qtd_nao_afastamento;
     if (total === 0) {
-      percentual_sim = 0;
-      percentual_nao = 0;
+      percentual_sim_afastamento = 0;
+      percentual_nao_afastamento = 0;
     } else {
-      percentual_sim = (qtd_sim_noBancoVar / total) * 100;
-      percentual_nao = (qtd_nao_noBancoVar / total) * 100;
+      percentual_sim_afastamento = (qtd_sim_afastamento / total) * 100;
+      percentual_nao_afastamento = (qtd_nao_afastamento / total) * 100;
     }
 
-    console.log("percentual_sim:", percentual_sim, "percentual_nao:", percentual_nao);
+    console.log("percentual_sim_afastamento:", percentual_sim_afastamento, "percentual_nao_afastamento:", percentual_nao_afastamento);
   }
 
-  function criarGraficoAfastamento() {
+  function criar_grafico_afastamento() {
     const grafico_afastamento = document.getElementById("canvas_grafico_afastamento");
     new Chart(grafico_afastamento, {
       type: "pie",
@@ -138,7 +157,7 @@
         datasets: [
           {
             label: "percentual",
-            data: [percentual_sim, percentual_nao],
+            data: [percentual_sim_afastamento, percentual_nao_afastamento],
             backgroundColor: [
               "rgb(75, 192, 192)",
               "rgb(255, 99, 132)",
@@ -150,25 +169,30 @@
     });
   }
 
-  const grafico_motivo = document.getElementById("canvas_grafico_motivo");
-  new Chart(grafico_motivo, {
-    type: "bar",
-    data: {
-      labels: ["Bullying", "Problemas em casa", "Apenas maus entendimentos", "Outros"],
-      datasets: [
-        {
-          label: "votos",
-          data: [12, 6, 9, 10],
-          backgroundColor: [
-            "rgb(255, 99, 132)",
-            "rgb(75, 192, 192)",
-            "rgb(255, 205, 86)",
-            "rgb(201, 203, 207)",
-          ],
-          hoverOffset: 4
-        },
-      ],
-    },
-  });
+  function criar_grafico_motivo() {
+    const grafico_motivo = document.getElementById("canvas_grafico_motivo");
+    new Chart(grafico_motivo, {
+      type: "bar",
+      data: {
+        labels: ["Bullying", "Problemas em casa", "Apenas maus entendimentos", "Outros"],
+        datasets: [
+          {
+            label: "",
+            data: [bullying, problema_em_casa, mau_entendido, outro],
+            backgroundColor: [
+              "rgb(255, 99, 132)",
+              "rgb(75, 192, 192)",
+              "rgb(255, 205, 86)",
+              "rgb(201, 203, 207)",
+            ],
+            hoverOffset: 4
+          },
+        ],
+      },
+      options: {plugins:{legend:{display:false}}}
+    });
+  }
+
+
 
 </script>
